--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           ><i class="fa-solid fa-briefcase-medical"></i> helpers</a
         >
         <a href="https://github.com/MFLXU/minimal.css.git" class="cta-btn mt-2 hov-2 shadow bha">
-          download stylesheet <i class="fa-brands fa-github"></i
+          download stylesheet</i
         ></a>
         <p class="mt-2">
           open-source project by
@@ -350,7 +350,7 @@
         <!-- typography -->
         <h2 id="typo">typography</h2>
         <p>
-          the font used is <em>SF MONO</em>, type is all set with
+          the font used is <em>DM SANS</em>, type is all set with
           <span class="cd-snippet">rem</span> soo all font-size and spacial
           relationships can be responsively sized based on a single HTML5
           proprety, for example <span class="cd-snippet">3.6rem</span> equals to
